2012-03-28  Paul Thomas  <pault@gcc.gnu.org> 	Tobias Burnus  <burnus@gcc.gnu.org>

PR fortran/52652
	* match.c (gfc_match_allocate, gfc_match_deallocate): Change
	"not.. or" to "neither.. nor".
	* parse.c (decode_specification_statement): Correct error in
	chpice of matching function for "allocatable". 

2012-03-28  Paul Thomas  <pault@gcc.gnu.org>
	Tobias Burnus  <burnus@gcc.gnu.org>

	PR fortran/52652
	* gfortran.dg/allocate_class_1.f90 : Change error test.
	* gfortran.dg/allocate_with_typespec_4.f90 : Change error test.
	* gfortran.dg/allocate_alloc_opt_1.f90 : Change error test.
	* gfortran.dg/deallocate_alloc_opt_1.f90 : Change error test.



git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@185924 138bc75d-0d04-0410-961f-82ee72b054a4